wrap up ui stuff, start on solver logic

--- a/index.html
+++ b/index.html
@@ -14,78 +14,74 @@
       </div>
       <div class="container">
         <div class="row">
-          <div class="cell"></div>
+          <div class="cell blank"></div>
           <div class="cell operator">
-            <input type="text" />
+            <input type="text" placeholder="?" maxlength="1" />
           </div>
-          <div class="cell"></div>
+          <div class="cell blank"></div>
           <div class="cell operator">
-            <input type="text" />
+            <input type="text" placeholder="?" maxlength="1" />
           </div>
-          <div class="cell"></div>
+          <div class="cell blank"></div>
           <div class="cell equals">=</div>
           <div class="cell solution">
-            <input type="text" />
+            <input type="number" placeholder="?" />
           </div>
         </div>
         <div class="row">
           <div class="cell operator">
-            <input type="text" />
+            <input type="text" placeholder="?" maxlength="1" />
           </div>
           <div class="cell gray"></div>
           <div class="cell operator">
-            <input type="text" />
+            <input type="text" placeholder="?" maxlength="1" />
           </div>
           <div class="cell gray"></div>
           <div class="cell operator">
-            <input type="text" />
+            <input type="text" placeholder="?" maxlength="1" />
           </div>
-          <div class="cell equals gray"></div>
-          <div class="cell gray"></div>
         </div>
         <div class="row">
-          <div class="cell"></div>
+          <div class="cell blank"></div>
           <div class="cell operator">
-            <input type="text" />
+            <input type="text" placeholder="?" maxlength="1" />
           </div>
-          <div class="cell"></div>
+          <div class="cell blank"></div>
           <div class="cell operator">
-            <input type="text" />
+            <input type="text" placeholder="?" maxlength="1" />
           </div>
-          <div class="cell"></div>
+          <div class="cell blank"></div>
           <div class="cell equals">=</div>
           <div class="cell solution">
-            <input type="text" />
+            <input type="number" placeholder="?" />
           </div>
         </div>
         <div class="row">
           <div class="cell operator">
-            <input type="text" />
+            <input type="text" placeholder="?" maxlength="1" />
           </div>
           <div class="cell gray"></div>
           <div class="cell operator">
-            <input type="text" />
+            <input type="text" placeholder="?" maxlength="1" />
           </div>
           <div class="cell gray"></div>
           <div class="cell operator">
-            <input type="text" />
+            <input type="text" placeholder="?" maxlength="1" />
           </div>
-          <div class="cell equals gray"></div>
-          <div class="cell gray"></div>
         </div>
         <div class="row">
-          <div class="cell"></div>
+          <div class="cell blank"></div>
           <div class="cell operator">
-            <input type="text" />
+            <input type="text" placeholder="?" maxlength="1" />
           </div>
-          <div class="cell"></div>
+          <div class="cell blank"></div>
           <div class="cell operator">
-            <input type="text" />
+            <input type="text" placeholder="?" maxlength="1" />
           </div>
-          <div class="cell"></div>
+          <div class="cell blank"></div>
           <div class="cell equals">=</div>
           <div class="cell solution">
-            <input type="text" />
+            <input type="number" placeholder="?" />
           </div>
         </div>
         <div class="row equals">
@@ -94,23 +90,19 @@
           <div class="cell">=</div>
           <div class="cell gray"></div>
           <div class="cell">=</div>
-          <div class="cell equals gray"></div>
-          <div class="cell gray"></div>
         </div>
         <div class="row">
           <div class="cell solution">
-            <input type="text" />
+            <input type="number" placeholder="?" />
           </div>
           <div class="cell gray"></div>
           <div class="cell solution">
-            <input type="text" />
+            <input type="number" placeholder="?" />
           </div>
           <div class="cell gray"></div>
           <div class="cell solution">
-            <input type="text" />
+            <input type="number" placeholder="?" />
           </div>
-          <div class="cell equals gray"></div>
-          <div class="cell gray"></div>
         </div>
       </div>
     </main>
