--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
           </div>
         </div>
       </div>
+      <div class="status-bar"></div>
     </main>
     <script src="app.js"></script>
   </body>
